tests/NormalTests/paczka2/big_fuzzy/92553312.err
Error in line 2: 14xsR7BTU A488 28,3
Error in line 15: FPyrdG S97s 30,7
Error in line 13: AwOehjzBI7C A488 43,1
Error in line 11: oD4S9Hu3oC A486 95,3
Error in line 14: uG7 A488 31,1
Error in line 18: uG7 A189 79,9
Error in line 17: oD4S9Hu3oC A488 47,5
Error in line 21: oD4S9Hu3oC A189 61,9
Error in line 19: uG7 A488 54,0
Error in line 27: uG7 S974 19,0
Error in line 46: S974 A189 41,02
Error in line 45: FPyrdG S974 11,0
Error in line 49: AwOehjzBI7C A488 10,2
Error in line 53: FPyrdG A488 91,02
Error in line 50: FPyrdG A189 45,8
Error in line 54: FPyrdG A488 126,8
Error in line 52: bG4rPv04r S974 5,3
Error in line 43: S974 A189 15,0
Error in line 47: oD4S9Hu3oC S974 1,5
Error in line 59: bG4rPv04r A488 54,1
Error in line 69: AwOehjzBI7C S974 38,0
Error in line 85: AwOehjzBI7C S974 11,6
Error in line 86: AwOehjzBI7C A189 28,5
Error in line 84: FPyrdG A488 78,3
Error in line 90: 14xsR7BTU A488 76,0
Error in line 92: FPyrdG S974 25,4
Error in line 100: AwOehjzBI7C A486 13,5
Error in line 98: oD4S9Hu3oC A488 11,6
Error in line 115: S974 A486 70,3
Error in line 116: S974 S974 82,4
Error in line 128: S97_ A189 9,5
Error in line 127: uG7 S974 2,8
Error in line 136: S974 A488 85,6
Error in line 147: S974 S974 45,9
Error in line 153: FPyrdG A488 47,8
Error in line 165: oD4S9Hu3oC A189 86,5
Error in line 168: oD4S9Hu3oC A488 12,0
Error in line 163: FPyrdG A189 40,0
Error in line 176: S974 S974 -5,8
Error in line 174: bG4rPv04r S974 30,7
Error in line 185: bG4rPv04r A488 51,3
Error in line 194: AwOehjzBI7C A488 33,3
Error in line 199: uG7 S974 9,6
Error in line 200: uG7 A488 42,3
Error in line 193: FPyrdG A189 62,3
Error in line 207: FPyrdG S974 28,5
Error in line 205: 14xsR7BTU A488 88,8
Error in line 222: bG4rPv04r A189 65,9
Error in line 204: S974 A488 29,6
Error in line 232: 14xsR7BTU A486 16,9
Error in line 224: bG4rPv04r A488 91,8
Error in line 230: AwOehjzBI7C S974 36,1
